--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap">
   <title>buat lana oshiku satu2nya</title>
   <link rel="stylesheet" href="./style.css">
+  <style>
+    body {
+      background-image: url('background.png');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      background-size: 70%;
+    }
+  </style>
 </head>
 <body>
     <video id="video" src="video.mp4" preload="auto" style="display:none;"></video>
@@ -20,12 +30,12 @@
         <div class="words line4"></div>
       </div>
       <div class="hearts">
-        <div class="heart a1"></div>
         <img class="heart a4" src="lana.jpg" alt="lana" style="width: 90px;">
-        <div class="heart a2"></div>
+        <div class="heart a1"></div>
         <img class="heart a5" src="lana1.jpg" alt="lana" style="width: 90px;">
-        <div class="heart a3"></div>
+        <div class="heart a2"></div>
         <img class="heart a6" src="lana2.jpg" alt="lana" style="width: 90px;">
+        <div class="heart a3"></div>
         <img class="heart a7" src="lana3.jpg" alt="lana" style="width: 90px;">
       </div>
     </div>
@@ -34,6 +44,10 @@
     <button id="open">Open</button>
     <button id="reset">Reset</button>
   </div>
+  <div>
+    <p class="motivational-text" >SEMANGAT TERUS YAA LANAA...💪😁</p> 
+  </div>
+  
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
   <script src="./script.js"></script>
